Fix server Makefile

--- a/server/Makefile
+++ b/server/Makefile
@@ -51,7 +51,7 @@ NAME		:= $(OUTDIR)/server
 
 all: $(NAME)
 
-$(NAME): libcbuf libft $(OBJS) $(HEADERS)
+$(NAME): ../cbuf/libcbuf.a ../libft/libft.a $(OBJS) $(HEADERS)
 	@mkdir -p $(OUTDIR)
 	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LIBS) -lbsd
 
@@ -67,10 +67,8 @@ fclean: clean
 
 re: fclean all
 
-libcbuf: ../cbuf/libcbuf.a
-
 ../cbuf/libcbuf.a:
 	make -C ../cbuf
 
-libft: ../libft/libft.a
+../libft/libft.a:
 	make -C ../libft
