--- a/libft/Makefile
+++ b/libft/Makefile
@@ -32,7 +32,7 @@ SOURCES_RAW	= ft_memalloc.c ft_memdel.c ft_strnew.c ft_strdel.c ft_strclr.c \
 			  ft_lstiter.c ft_lstmap.c ft_lstmap.c ft_abs.c ft_strupper.c \
 			  ft_strlower.c get_next_line.c ft_lstpush_filter.c ft_getopt.c \
 			  ft_lstpush.c ft_stradd.c ft_isspace.c ft_strjoin_at.c ft_strndup.c \
-			  ft_dlstadd.c ft_dlstnew.c ft_dlstdelone.c ft_dlstdel.c
+			  ft_dlstadd.c ft_dlstnew.c ft_dlstdelone.c ft_dlstdel.c ft_strlcpy.c
 OBJECTS_RAW	= $(SOURCES_RAW:.c=.o)
 DEPS_RAW	= libft.h libft_mem.h libft_list.h libft_str.h
 
