--- a/libft/Makefile
+++ b/libft/Makefile
@@ -51,18 +51,17 @@ all: $(NAME)
 
 $(NAME): $(OBJECTS) $(DEPS)
 	@echo "Creating $(NAME)..."
-	@ar rc $(NAME) $(OBJECTS)
-	@ranlib $(NAME)
+	ar rc $(NAME) $(OBJECTS)
+	ranlib $(NAME)
 	@echo "Done $(NAME)!"
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	@mkdir -p $(OBJDIR)
-	@echo "Compiling '$<'..."
-	@$(CC) -c $< -o $@ $(CFLAGS) $(INCLUDES)
+	$(CC) -c $< -o $@ $(CFLAGS) $(INCLUDES)
 
 clean:
-	@$(RM) $(OBJECTS)
-	@$(RM) -R $(OBJDIR)
+	$(RM) $(OBJECTS)
+	$(RM) -R $(OBJDIR)
 
 fclean: clean
 	@$(RM) $(NAME)
