--- a/clientsrc/Makefile
+++ b/clientsrc/Makefile
@@ -42,7 +42,7 @@ HEADERS		:= \
 	../reply_codes.h
 
 OBJS 		:= $(SOURCES:.c=.o)
-OUTDIR		:= ../bin
+OUTDIR		:= ..
 INCLUDES	:= -I./ -I../ -I../libft/includes -I../cbuf/
 LIBS		:= -L../libft -lft -L../cbuf -lcbuf
 
@@ -62,7 +62,6 @@ clean:
 
 fclean: clean
 	rm -f $(NAME)
-	rm -Rf $(OUTDIR)
 
 re: fclean all
 
