Add better handling for client disconnections

--- a/serversrc/Makefile
+++ b/serversrc/Makefile
@@ -18,7 +18,7 @@ SOURCES		:= \
 	server.c \
 	accept_new_clients.c \
 	server_queue.c \
-	read_client_commands.c \
+	read_client_command.c \
 	execute_command.c \
 	nick.c \
 	set_usermode.c \
